# plugin-core

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/maxdev0101/plugin-core/: circularbuffer.h
source/: circularbuffer.cpp
test/: plugin-core_googletest.cpp
